update v3.25.7